--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -9,10 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: true
-      matrix:
-        versions: [ '1.16', '1.18', '1.19', '1.20' ]
 
     steps:
       - uses: actions/checkout@v3
@@ -20,7 +16,7 @@ jobs:
       - name: Set up
         uses: actions/setup-go@v3
         with:
-            go-version: ${{ matrix.versions }}
+            go-version: 'stable'
 
       - name: Build
         run: |
