--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -32,3 +32,13 @@ jobs:
         run: |
           go mod tidy
           go test -v -race -coverpkg=./... ./...
+
+  upload_artifacts:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Upload the artifacts
+        uses: skx/github-action-publish-binaries@release-1.3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          args: '*.bin'
