--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -34,6 +34,7 @@ jobs:
           go test -v -race -coverpkg=./... ./...
 
   upload_artifacts:
+    needs: [ build ]
     runs-on: ubuntu-latest
     steps:
       - name: Upload the artifacts
