--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -43,13 +43,10 @@ jobs:
           go mod tidy
           go test -v -race -coverpkg=./... ./...
 
-#  upload_artifacts:
-#    needs: [ build ]
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Upload the artifacts
-#        uses: skx/github-action-publish-binaries@release-1.3
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          args: '*.bin'
+      - name: Upload artifacts
+      - uses: actions/upload-artifact@master
+        run:
+          go build ./cmd/main.go
+        with:
+          name: main.exe
+          path: ./main.exe
