--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -43,26 +43,20 @@ jobs:
           go mod tidy
           go test -v -race -coverpkg=./... ./...
 
-  artifacts:
-      runs-on: ubuntu-latest
-      needs: [ build ]
-      steps:
-        - name: Build main.go
-          run: |
-            go mod tidy
-            go build ./cmd/main.go
+      - name: Build main.go
+        run: go build ./cmd/main.go
 
-        - name: Upload artifacts on GitHub
-          uses: actions/upload-artifact@master
-          with:
-            name: main_bin
-            path: ./main
+      - name: Upload artifacts on GitHub
+        uses: actions/upload-artifact@master
+        with:
+          name: main_bin
+          path: ./main
 
-        - name: Upload artifacts on GDrive
-          uses: adityak74/google-drive-upload-git-action@main
-          with:
-            credentials: ${{ secrets.credentials }}
-            filename: "main"
-            folderId: ${{ secrets.folderId }}
-            name: "documentation.zip" # optional string
-            overwrite: "true" # optional boolean
+      - name: Upload artifacts on GDrive
+        uses: adityak74/google-drive-upload-git-action@main
+        with:
+          credentials: ${{ secrets.credentials }}
+          filename: "main"
+          folderId: ${{ secrets.folderId }}
+          name: "documentation.zip" # optional string
+          overwrite: "true" # optional boolean
