--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -50,7 +50,7 @@ jobs:
           version: latest
 
   artifacts:
-    needs: [ build, checks ]
+    needs: [ build, lint ]
     runs-on: ubuntu-latest
 
 
