--- a/.github/workflows/dockerimage.yaml
+++ b/.github/workflows/dockerimage.yaml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [master]
 
+env:
+  SERVER_USER: vboxuser
+  SERVER_PATH: /deploy_test
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,3 +30,16 @@ jobs:
           file: Dockerfile
           push: true
           tags: antonsh117/ad-service:latest
+
+      # Deploy
+      - name: Install SSH key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: { %- raw -% } ${{ secrets.SSH_PK }}
+          known-hosts: "place-holder"
+
+      - name: Add known hosts
+        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Deploy
+        run: rsync --archive --compress --progress . ${{ env.SERVER_USER }}@${{ secrets.SSH_HOST }}:${{ env.SERVER_PATH }}
