--- a/.github/workflows/dockerimage.yaml
+++ b/.github/workflows/dockerimage.yaml
@@ -9,27 +9,27 @@ env:
   SERVER_PATH: /deploy_test
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set Up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set Up Docker BuildX
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          file: Dockerfile
-          push: true
-          tags: antonsh117/ad-service:latest
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Set Up QEMU
+#        uses: docker/setup-qemu-action@v2
+#
+#      - name: Set Up Docker BuildX
+#        uses: docker/setup-buildx-action@v2
+#
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v2
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#
+#      - name: Build and push
+#        uses: docker/build-push-action@v3
+#        with:
+#          file: Dockerfile
+#          push: true
+#          tags: antonsh117/ad-service:latest
 
       # Deploy
       - name: Install SSH key
