--- a/.github/workflows/dockerimage.yaml
+++ b/.github/workflows/dockerimage.yaml
@@ -9,9 +9,9 @@ env:
   SERVER_PATH: /deploy_test
 
 jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    steps:
+ build:
+   runs-on: ubuntu-latest
+   steps:
 #      - name: Set Up QEMU
 #        uses: docker/setup-qemu-action@v2
 #
