--- a/.github/workflows/dockerimage.yaml
+++ b/.github/workflows/dockerimage.yaml
@@ -42,4 +42,4 @@ jobs:
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
       - name: Deploy
-        run: rsync --archive --compress --progress . ${{ env.SERVER_USER }}@${{ secrets.SSH_HOST }}:${{ env.SERVER_PATH }}
+        run: sudo rsync --archive --compress --progress . ${{ env.SERVER_USER }}@${{ secrets.SSH_HOST }}:${{ env.SERVER_PATH }}
