--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -87,3 +87,36 @@ jobs:
           folderId: ${{ secrets.folderId }}
           name: "artifacts.zip"
           overwrite: "true"
+
+  push-to-dockerhub:
+    needs: [build, lint]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set Up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set Up Docker BuildX
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          file: Dockerfile
+          push: true
+          tags: antonsh117/ad-service:latest
+
+  deploy:
+    needs: [push-to-dockerhub]
+    runs-on: self-hosted
+
+    steps:
+      - name: pull image
+        run: docker pull antonsh117/ad-service:latest
+      - name: run container
+        run: docker run antonsh117/ad-service:latest
